--- a/myapp/src/index.css
+++ b/myapp/src/index.css
@@ -1,5 +1,10 @@
 body {
-  margin: 20px;
+  margin: 1rem 2rem;
   padding: 0;
   font-family: sans-serif;
+}
+
+div.ninja {
+  padding: 1rem 2rem;
+  border-bottom: 1px solid #aaa;
 }
