--- a/myapp/src/index.css
+++ b/myapp/src/index.css
@@ -1,6 +1,22 @@
 body {
-  margin: 20px;
-  padding: 0;
-  font-family: sans-serif;
-  background: #eee;
+	margin: 1rem 2rem;
+	padding: 0;
+	font-family: sans-serif;
+}
+
+div.ninja {
+	padding: 1rem 2rem;
+	border-bottom: 1px solid #aaa;
+}
+.form-class {
+	padding: 1rem 2rem;
+}
+h4 {
+	color: tomato;
+}
+
+p,
+form { 
+	padding: 1rem 2rem;
+	color: gray;
 }
