--- a/todoapp/src/index.css
+++ b/todoapp/src/index.css
@@ -1,25 +1,35 @@
 body {
-  margin: 0;
-  padding: 0;
-  font-family: sans-serif;
-  background: #eee;
+	margin: 0;
+	padding: 0;
+	font-family: sans-serif;
+	background: #eee;
 }
 
-.todo-app{
-  max-width: 700px;
-  margin: 20px auto;
-  padding: 10px 20px 10px;
+.todo-app {
+	max-width: 700px;
+	margin: 20px auto;
+	padding: 10px 20px 10px;
 }
 
-.collection-item{
-  background: #fff;
+.collection-item {
+	background: #fff;
 }
 
-.collection-item span:hover{
-  cursor: pointer;
-  text-decoration: line-through;
+.collection-item span:hover {
+	cursor: pointer;
+	text-decoration: line-through;
 }
 
-form{
-  margin: 20px 10px;
+form {
+	margin: 20px 10px;
+}
+label {
+	font-size: 1rem;
+	color: #9e9e9e;
+}
+
+form > input[type='text'].collecting-item {
+	background: #fff;
+	background: honeydew;
+	padding: 0 1rem;
 }
